[package]
name = "wasmtime-py"
version = "0.2.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

[lib]
name = "wasmtime_py"
crate-type = ["cdylib"]

[dependencies]
cranelift-codegen = "0.30.0"
cranelift-native = "0.30.0"
cranelift-entity = "0.30.0"
cranelift-wasm = "0.30.0"
cranelift-frontend = "0.30.0"
wasmtime-environ = { git = "https://github.com/CraneStation/wasmtime", rev = "6740704b" }
wasmtime-jit = { git = "https://github.com/CraneStation/wasmtime", rev = "6740704b" }
wasmtime-runtime = { git = "https://github.com/CraneStation/wasmtime", rev = "6740704b" }
target-lexicon = { version = "0.3.0", default-features = false }
region = "2.0.0"

[dependencies.pyo3]
version = "0.7.0-alpha.1"
features = ["extension-module"]

[patch.crates-io]
