[package]
name = "wasmtime-py"
version = "0.2.0"
authors = ["The Wasmtime Project Developers"]
description = "Python extension for the wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "python"]
repository = "https://github.com/yurydelendik/wasmtime-py"
edition = "2018"
publish = false

[lib]
name = "wasmtime_py"
crate-type = ["cdylib"]

[dependencies]
cranelift-codegen = "0.30.0"
cranelift-native = "0.30.0"
cranelift-entity = "0.30.0"
cranelift-wasm = "0.30.0"
cranelift-frontend = "0.30.0"
wasmtime-environ = { git = "https://github.com/CraneStation/wasmtime", rev = "6740704b" }
wasmtime-jit = { git = "https://github.com/CraneStation/wasmtime", rev = "6740704b" }
wasmtime-runtime = { git = "https://github.com/CraneStation/wasmtime", rev = "6740704b" }
target-lexicon = { version = "0.3.0", default-features = false }
region = "2.0.0"

[dependencies.pyo3]
version = "0.7.0-alpha.1"
features = ["extension-module"]

[patch.crates-io]
