[package]
name = "wasmtime-py"
version = "0.2.0"
authors = ["The Wasmtime Project Developers"]
description = "Python extension for the wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "python"]
repository = "https://github.com/yurydelendik/wasmtime-py"
edition = "2018"
publish = false

[lib]
name = "_wasmtime"
crate-type = ["cdylib"]

[dependencies]
cranelift-codegen = "0.38.0"
cranelift-native = "0.38.0"
cranelift-entity = "0.38.0"
cranelift-wasm = "0.38.0"
cranelift-frontend = "0.38.0"
wasmtime-environ = { path = "./wasmtime/wasmtime-environ" }
wasmtime-jit = { path = "./wasmtime/wasmtime-jit" }
wasmtime-runtime = { path = "./wasmtime/wasmtime-runtime" }
target-lexicon = { version = "0.4.0", default-features = false }
region = "2.0.0"
wasmparser = "0.35.3"

[dependencies.pyo3]
version = "0.7.0-alpha.1"
features = ["extension-module"]
